--- a/docs/gram/examples/creating-taskmaster-mcp-server.mdx
+++ b/docs/gram/examples/creating-taskmaster-mcp-server.mdx
@@ -180,7 +180,10 @@ For example, let's add a function that sends email reminders to users about thei
    pnpm create @gram-ai/function@latest --template gram
 ```
 
+​	This will prompt you to enter the directory name and the project name, which will be the name of the Gram function.
+
 2. Replace the contents of `gram.ts` with the following code:
+
 ```ts
 import { Gram } from "@gram-ai/functions";
 import * as z from "zod/mini";
@@ -225,7 +228,7 @@ const gram = new Gram().tool({
 export default gram;
 ```
 
-The code above creates a Gram function called `send_email` that accepts an email address, task title, and description as validated inputs using Zod schemas. The function uses the Resend API to send formatted HTML emails, with comprehensive error handling using `ctx.fail()` to return structured error responses with appropriate HTTP status codes, and `ctx.json()` to return successful results with the email message ID.
+The code above creates a function called `send_email` that accepts an email address, task title, and description as validated inputs using Zod schemas. The function uses the Resend API to send formatted HTML emails, with comprehensive error handling using `ctx.fail()` to return structured error responses with appropriate HTTP status codes, and `ctx.json()` to return successful results with the email message ID.
 
 3. Build and deploy the function:
 
