update screenshots: getting started + concepts sections

--- a/docs/gram/concepts/toolsets.mdx
+++ b/docs/gram/concepts/toolsets.mdx
@@ -43,7 +43,7 @@ In addition to enabling powerful agents through well-scoped toolsets, Gram autom
 
 You can also scroll down to the **Visibility** section to set the MCP server to public or private.
 
-Under the the **MCP Installation** section, you can choose to install the MCP server using Pass-through authentication or Gram authentication.
+Under the the **MCP Installation** section, you can view and edit the toolset's published installation page.
 
 ![MCP server configuration](/assets/docs/gram/img/concepts/toolsets/mcp-server-toolsets-config-options.png)
 
