add link to example

--- a/docs/gram/examples/creating-taskmaster-mcp-server.mdx
+++ b/docs/gram/examples/creating-taskmaster-mcp-server.mdx
@@ -260,6 +260,8 @@ Please send an email to user@example.com to remind them of the pending tasks.
 
 ![Testing the send email tool](./assets/testing-the-send-email-function.png)
 
+You can find the complete code for this Resend integration example in the [Gram repository](https://github.com/speakeasy-api/gram/tree/main/examples/resend).
+
 ## Testing the MCP server
 
 Before connecting to external clients, test your setup by using the **Gram Playground** to verify that your tools are working correctly.
