Proofread: Creating an MCP server for Taskmaster

--- a/docs/gram/examples/creating-taskmaster-mcp-server.mdx
+++ b/docs/gram/examples/creating-taskmaster-mcp-server.mdx
@@ -35,7 +35,7 @@ To follow this tutorial, you need:
 
 ## Setting up a Gram project
 
-On the [Gram dashboard](https://app.getgram.ai), click your username at the bottom-left corner and then open the projects dropdown. Select **+ New Project**, enter a project name, and click **Submit**.
+On the [Gram dashboard](https://app.getgram.ai), click your username in the bottom-left corner and then open the projects dropdown. Select **+ New Project**, enter a project name, and click **Submit**.
 
 ![Screenshot of the Gram dashboard showing the New Project link](./assets/gram-new-project.png)
 
