Proofread: Creating an MCP server for Taskmaster

--- a/docs/gram/examples/creating-taskmaster-mcp-server.mdx
+++ b/docs/gram/examples/creating-taskmaster-mcp-server.mdx
@@ -39,7 +39,7 @@ On the [Gram dashboard](https://app.getgram.ai), click your username in the bott
 
 ![Screenshot of the Gram dashboard showing the New Project link](./assets/gram-new-project.png)
 
-Click **Get Started** and select **Start fom API** to start the guided setup flow for creating a toolset and MCP server.
+Click **Get Started** and select **Start from API** to start the guided setup flow for creating a toolset and MCP server.
 
 Gram will then guide you through the following steps:
 
