update Gram Screenshots

--- a/docs/gram/examples/adding-ai-chat-to-your-app.mdx
+++ b/docs/gram/examples/adding-ai-chat-to-your-app.mdx
@@ -200,7 +200,11 @@ In the **MCP** tab, find the MCP server and set it to **Public** under **Visibil
 
 ![Gram MCP server dashboard showing Visibility settings with Public option selected and MCP Installation section showing the server URL](/assets/docs/gram/img/guides/adding-ai-chat-to-your-app/gram-public-mcp-server.png)
 
-In the **MCP Installation** section, copy the server URL from the `"args"` array (for example, `https://app.getgram.ai/mcp/your-server-id`). You'll use this when you configure the chat microservice in Step 3.
+In the **MCP Installation** section, click the **View** button to open the server installation page. 
+
+![Gram MCP server installation page](/assets/docs/gram/img/guides/adding-ai-chat-to-your-app/gram-server-installation-page.png)
+
+Scroll down to the **Raw Confirm** section and copy the server configuration.
 
 ### Expose your local API with ngrok
 
