--- a/docs/gram/examples/creating-taskmaster-mcp-server.mdx
+++ b/docs/gram/examples/creating-taskmaster-mcp-server.mdx
@@ -116,8 +116,7 @@ Scroll down to the **Visibility** section and tick the **Public** checkbox.
 
 Next, you'll need to copy the MCP server configuration.
 
-Scroll down to the **MCP Config** section and copy the **Public Server** configuration.
-
+Scroll down to the **MCP Installation** section and click **View** to view the installation guide. 
 ![Screenshot showing the MCP server config dialog for the Taskmaster toolset](/assets/docs/gram/img/guides/build-mcp/create-taskmaster-mcp-server/copy-mcp-config.png)
 
 The configuration looks something like this:
@@ -185,6 +184,3 @@ Your Taskmaster MCP server is now ready to use with any MCP client. You can conn
 - [Your IDE](/docs/gram/clients/using-your-ide-with-gram-mcp-server)
 - [Cline](/docs/gram/clients/using-cline-with-gram-mcp-server)
 - Any other MCP-compatible client
-
-
-
