--- a/docs/gram/clients/using-mistral-with-gram-mcp-servers.mdx
+++ b/docs/gram/clients/using-mistral-with-gram-mcp-servers.mdx
@@ -90,9 +90,13 @@ Let's make the toolset available as an MCP server.
 
 Go to the **MCP** tab, find the Acme Todo toolset and click on it to open the MCP details page.
 
-Scroll down to the **Hosted URL** section and copy the URL.
+Scroll down to the **MCP Install** section and click **View** to open the installation page.
 
 ![Screenshot showing the MCP server config dialog for the Acme Todo toolset](/assets/docs/gram/img/guides/mistral/mcp-public-server-copy-url.png)
+
+Scroll down to the **Raw Configuration** section and copy the raw configuration.
+
+![Screenshot showing the raw configuration for the Acme Todo toolset](/assets/docs/gram/img/guides/mistral/copy-raw-config.png)
 
 ## Connecting Mistral to your Gram-hosted MCP server
 
