--- a/docs/gram/clients/using-n8n-with-gram-mcp-servers.mdx
+++ b/docs/gram/clients/using-n8n-with-gram-mcp-servers.mdx
@@ -83,9 +83,13 @@ On the **MCP Details** page, tick the **Public** checkbox and click **Save**.
 
 ![Screenshot of the MCP details page](/assets/docs/gram/img/guides/n8n/mcp-details.png)
 
-Scroll down to the **MCP Config** section and copy the **Public Server** configuration.
+Scroll down to the **MCP Installation** section and click the **View** button to open the Installation page.
 
 ![Screenshot showing the MCP server config dialog for the Push Advisor toolset](/assets/docs/gram/img/guides/n8n/copy-mcp-config.png)
+
+Scroll down to the **Raw Configuration** section and copy the configuration.
+
+![Screenshot showing the raw configuration for the Push Advisor toolset](/assets/docs/gram/img/guides/n8n/copy-raw-config.png)
 
 The configuration will look something like this:
 
@@ -221,4 +225,3 @@ For authenticated servers:
 You now have n8n connected to a Gram-hosted MCP server, enabling AI-powered automation workflows with access to your APIs and tools.
 
 Ready to build your own MCP server? [Try Gram today](/product/gram) and see how easy it is to turn any API into agent-ready tools.
-
