docs: screenshot updates Nov 2025 - PMM-669 (#77)

--- a/docs/gram/examples/creating-taskmaster-mcp-server.mdx
+++ b/docs/gram/examples/creating-taskmaster-mcp-server.mdx
@@ -115,9 +115,8 @@ Scroll down to the **Visibility** section and select the **Public** checkbox.
 
 ![Screenshot of the MCP details page](/assets/docs/gram/img/examples/mcp-details.png)
 
-Next, you'll need to copy the MCP server configuration.
-
-Scroll down to the **MCP Installation** section and click the **View** button to open the configuration details page.
+Scroll down to the **MCP Installation** section and click **View** to view the installation guide. 
+![Screenshot showing the MCP server config dialog for the Taskmaster toolset](/assets/docs/gram/img/guides/build-mcp/create-taskmaster-mcp-server/copy-mcp-config.png)
 
 If you set the visibility to **Public**, the configuration will look something like this:
 
@@ -282,6 +281,3 @@ Your Taskmaster MCP server is now ready to use with any MCP client. You can conn
 - [Your IDE](/docs/gram/clients/using-your-ide-with-gram-mcp-server)
 - [Cline](/docs/gram/clients/using-cline-with-gram-mcp-server)
 - Any other MCP-compatible client
-
-
-
