update: split off Cursor guide into its own page && add Gram install method && add installation page

--- a/docs/gram/clients/using-your-ide-with-gram-mcp-server.mdx
+++ b/docs/gram/clients/using-your-ide-with-gram-mcp-server.mdx
@@ -18,7 +18,7 @@ Find the full code and OpenAPI document in the [Taskmaster repository](https://g
 To follow this guide, you need:
 
 - A [Gram account](https://app.getgram.ai)
-- An MCP client (This guide covers Cursor, VS Code with Copilot, Windsurf, and Amp. For Claude Desktop, see the [dedicated Claude Desktop guide](/docs/gram/clients/using-claude-desktop-with-gram-mcp-server).)
+- An MCP client (This guide covers VS Code with Copilot, Windsurf, and Amp. For Cursor, see the [dedicated Cursor guide](/docs/gram/clients/using-cursor-with-gram-mcp-server). For Claude Desktop, see the [dedicated Claude Desktop guide](/docs/gram/clients/using-claude-desktop-with-gram-mcp-server).)
 
 ## Creating an MCP server
 
@@ -28,72 +28,7 @@ Once your Taskmaster MCP server is ready, you can connect it to your IDE. The fo
 
 ## Adding the Gram-hosted MCP server to Cursor
 
-Cursor's built-in configuration interface makes it easy to add and manage MCP servers directly from settings.
-
-<div className="flex justify-center">
-  <video controls>
-    <source src="/assets/docs/gram/videos/installing-mcp-cursor.mp4" type="video/mp4"></source>
-    Your browser does not support the video tag.
-  </video>
-</div>
-
-### 1. Access the Cursor MCP configuration
-
-In Cursor, navigate to **Settings -> Cursor Settings** and open **Tools & Integrations**. Look for the **MCP Tools** section and click **Add Custom MCP**.
-
-### 2. Add the MCP server configuration
-
-Cursor's global MCP configuration file will open. Add your Taskmaster MCP server configuration from the [Creating a Taskmaster MCP server](/docs/gram/examples/creating-taskmaster-mcp-server) guide.
-
-For a public server, the configuration looks like this:
-
-```json
-{
-  "mcpServers": {
-    "GramTaskmaster": {
-      "command": "npx",
-      "args": [
-        "mcp-remote",
-        "https://app.getgram.ai/mcp/your-taskmaster-slug",
-        "--header",
-        "MCP-TASK-MASTER-API-KEY:${MCP_TASK_MASTER_API_KEY}"
-      ],
-      "env": {
-        "MCP_TASK_MASTER_API_KEY": "your-api-key"
-      }
-    }
-  }
-}
-```
-
-For an authenticated server, the configuration looks like this:
-
-```json
-{
-  "mcpServers": {
-    "GramTaskmaster": {
-      "command": "npx",
-      "args": [
-        "mcp-remote",
-        "https://app.getgram.ai/mcp/your-taskmaster-slug",
-        "--header",
-        "Authorization: ${GRAM_KEY}"
-      ],
-      "env": {
-        "GRAM_KEY": "Bearer your-gram-api-key"
-      }
-    }
-  }
-}
-```
-
-### 3. Use the MCP server tools
-
-Open Cursor's AI chat by clicking the chat icon or pressing `Cmd/Ctrl + L`. You can now ask questions like:
-
-```
-Create a new task called "Implement user authentication" with description "Add login and registration functionality to the app"
-```
+For detailed instructions on connecting Cursor to Gram-hosted MCP servers, including using the Gram CLI for quick setup, see the [dedicated Cursor guide](/docs/gram/clients/using-cursor-with-gram-mcp-server).
 
 ## Adding the Gram-hosted MCP server to VS Code with GitHub Copilot
 
