adding guides for Zod v3 and v4

--- a/openapi/frameworks/zod.mdx
+++ b/openapi/frameworks/zod.mdx
@@ -1,11 +1,15 @@
 ---
-title: How To Generate an OpenAPI Document With Zod
-description: "How to generate OpenAPI documents and great SDK clients for your Zod-validated API."
+title: How To Generate an OpenAPI Document With Zod v4
+description: "How to generate OpenAPI documents and great SDK clients for your Zod v4-validated API."
 ---
 
 import { Callout } from "@/mdx/components";
 
-# How to generate an OpenAPI document with Zod
+# How to generate an OpenAPI document with Zod v4
+
+<Callout title="Zod Version" type="info">
+This guide covers Zod v4. For Zod v3, see the [Zod v3 guide](/openapi/frameworks/zod-v3).
+</Callout>
 
 Zod is a powerful and flexible schema validation library for TypeScript, which many developers use to define their TypeScript data parsing schemas.
 
