--- a/docs/gram/api-clients/using-vellum-workflows-sdk-with-gram-mcp-servers.mdx
+++ b/docs/gram/api-clients/using-vellum-workflows-sdk-with-gram-mcp-servers.mdx
@@ -18,7 +18,7 @@ To follow this tutorial, you need:
 - A [Gram account](/product/gram)
 - A [Vellum account](https://vellum.ai/) with an API key
 - A Python environment set up on your machine
--  `uv` package manager installed
+- `uv` package manager installed
 - Basic familiarity with making API requests
 
 ## Creating a Gram MCP server
@@ -27,25 +27,25 @@ If you already have a Gram MCP server configured, you can skip to [connecting Ve
 
 ### Setting up a Gram project
 
-In the [Gram dashboard](https://app.getgram.ai), click **New Project** to start the guided setup flow for creating a toolset and MCP server.
+In the [Gram dashboard](https://app.getgram.ai), click **New Project** to create a new project. Enter a project name and click **Submit**
 
-![Screenshot of the Gram dashboard showing the New Project link](/assets/docs/gram/img/guides/mcp-installing-ide/gram-new-project.png)
+![Screenshot of the Gram dashboard showing the New Project modal](./assets/gram-new-project.png)
 
-Enter a project name and click **Submit**.
+Once the project is created click the **Get Started** button.
 
-Gram will then guide you through the following steps.
+Choose **Start from API**. Gram will then guide you through the following steps.
 
 #### Step 1: Upload the OpenAPI document
 
 Upload the [Push Advisor OpenAPI document](https://github.com/ritza-co/gram-examples/blob/main/push-advisor-api/openapi.yaml), enter the name of your API, and click **Continue**.
 
-![Screenshot of the upload your OpenAPI document dialog](/assets/docs/gram/img/guides/mcp-installing-ide/upload-openapi-spec.png)
+![Screenshot of the upload your OpenAPI document dialog](./assets/upload-openapi-spec.png)
 
 #### Step 2: Create a toolset
 
 Give your toolset a name (for example, "Push Advisor") and click **Continue**.
 
-![Screenshot of the create toolset dialog](/assets/docs/gram/img/guides/mcp-installing-ide/create-toolset.png)
+![Screenshot of the create toolset dialog](./assets/create-toolset.png)
 
 Notice that the names of the tools that will be generated from your OpenAPI document are displayed in this dialog.
 
@@ -53,13 +53,26 @@ Notice that the names of the tools that will be generated from your OpenAPI docu
 
 Enter a URL slug for the MCP server and click **Continue**.
 
-![Screenshot of the configure MCP dialog](/assets/docs/gram/img/guides/mcp-installing-ide/configure-mcp.png)
+![Screenshot of the configure MCP dialog](./assets/configure-mcp.png)
 
 Gram will create a new toolset from the OpenAPI document.
 
 Click **Toolsets** in the sidebar to view the Push Advisor toolset.
 
-![Screenshot of the Gram dashboard showing the Push Advisor toolset](/assets/docs/gram/img/guides/mcp-installing-ide/toolset-created.png)
+![Screenshot of the Gram dashboard showing the Push Advisor toolset](./assets/toolset-created.png)
+
+### Configuring environment variables
+
+[Environments](/docs/gram/concepts/environments) store API keys and configuration separately from your toolset logic.
+
+In the **Environments** tab, click the **Default** environment. Click **Fill for Toolset**. Select the **Push Advisor** toolset and click **Fill Variables** to automatically populate the required variables.
+
+![Screenshot showing the fill for toolset dialog to automatically populate required variables](./assets/fill-env-vars-toolset.png)
+
+The Push Advisor API is hosted at `https://canpushtoprod.abdulbaaridavids04.workers.dev`, so set the `<your_API_name>_SERVER_URL` environment variable to `https://canpushtoprod.abdulbaaridavids04.workers.dev`. Click **Save**.
+
+![Set server URL](./assets/set-server-url.png)
+
 
 ### Publishing an MCP server
 
@@ -67,15 +80,13 @@ Let's make the toolset available as an MCP server.
 
 Go to the **MCP** tab, find the Push Advisor toolset, and click the title of the server.
 
-On the **MCP Details** page, tick the **Public** checkbox and click **Save**.
+On the **MCP Details** page, click **Enable**  and then **Enable Server** to enable the server.
 
-![Screenshot of the MCP details page](/assets/docs/gram/img/guides/mcp-installing-ide/mcp-details.png)
+![Screenshot of the MCP details page](./assets/mcp-details.png)
 
-Scroll down to the **MCP Config** section and note your MCP server URL. For this guide, we'll use the public server URL format:
+Take note of your MCP server URL on the **Hosted URL** section.
 
-`https://app.getgram.ai/mcp/canipushtoprod`
-
-For authenticated servers, you'll need an API key. [Generate an API key](/docs/gram/concepts/api-keys) in the **Settings** tab.
+[Generate a GRAM API key](/docs/gram/concepts/api-keys) in the **Settings** tab.
 
 ## Connecting Vellum to your Gram-hosted MCP server
 
@@ -111,6 +122,8 @@ VELLUM_API_KEY=your-vellum-api-key-here
 GRAM_KEY=your-gram-api-key-here
 ```
 
+Your can create your Vellum API key by clicking your username (top-right) on the dashboard and navigating to **Settings -> API Keys**.
+
 Test that your Vellum API key works:
 
 ```bash
@@ -133,8 +146,6 @@ Inside the project directory, create a file called `workflow.py`. Start by defin
 ```python
 from vellum.workflows.inputs.base import BaseInputs
 
-...
-
 class Inputs(BaseInputs):
     """Workflow input variables."""
     query: str
@@ -154,12 +165,14 @@ from vellum.workflows.types.definition import MCPServer
 # MCP server configuration
 mcp_server = MCPServer(
     name="CanIPushToProd",
-    url="https://app.getgram.ai/mcp/ritza-rzx-2cav1",
+    url="https://app.getgram.ai/mcp/your_server_slug",
     authorization_type=AuthorizationType.API_KEY,
     api_key_header_key="Authorization",
     api_key_header_value=EnvironmentVariableReference(name="GRAM_KEY"),
 )
 ```
+
+Replace the `your_server_slug` with your actual MCP server slug.
 
 Now define the agent node. The `Agent` class is a `ToolCallingNode` that uses the MCP server:
 
@@ -167,13 +180,15 @@ Now define the agent node. The `Agent` class is a `ToolCallingNode` that uses th
 from vellum import ChatMessagePromptBlock, PlainTextPromptBlock, PromptParameters, RichTextPromptBlock
 from vellum.workflows.nodes.displayable.tool_calling_node import ToolCallingNode
 
+...
+
 class Agent(ToolCallingNode):
     """Agent node that uses the CanIPushToProd MCP server as a tool."""
-    
+
     ml_model = "gpt-5-responses"
     prompt_inputs = {"query": Inputs.query}
     max_prompt_iterations = 25
-    
+
     blocks = [
         ChatMessagePromptBlock(
             chat_role="SYSTEM",
@@ -198,15 +213,15 @@ class Agent(ToolCallingNode):
             ],
         ),
     ]
-    
+
     parameters = PromptParameters(
         temperature=0,
         max_tokens=1000,
         custom_parameters={"json_mode": False},
     )
-    
+
     settings = {"stream_enabled": False}
-    
+
     functions = [mcp_server]
 ```
 
@@ -222,7 +237,7 @@ from vellum.workflows.state.base import BaseState
 
 class FinalOutput(FinalOutputNode[BaseState, str]):
     """Final output node that returns the agent's text response."""
-    
+
     class Outputs(FinalOutputNode.Outputs):
         value = Agent.Outputs.text
 ```
@@ -247,9 +262,59 @@ The `graph` defines the execution flow: `Agent >> FinalOutput` means data flows 
 
 ### Running the workflow
 
+Create a `run.py` file and add the following code:
+
+```python
+import os
+import sys
+from dotenv import load_dotenv
+from workflow import Workflow, Inputs
+
+load_dotenv()
+
+
+def main():
+    """Execute the workflow with the provided query."""
+    if not os.getenv("VELLUM_API_KEY"):
+        print("Error: VELLUM_API_KEY environment variable is not set")
+        print("Please set it in your .env file or export it")
+        sys.exit(1)
+
+    query = sys.argv[1] if len(sys.argv) > 1 else "Can I push to production?"
+    workflow = Workflow()
+
+    print(f"Executing workflow with query: {query}")
+    print("-" * 60)
+
+    result = workflow.run(inputs=Inputs(query=query))
+
+    if result.name == "workflow.execution.fulfilled":
+        print("\n✓ Workflow completed successfully!")
+        print("-" * 60)
+
+        for output_descriptor, output_value in result.outputs:
+            if output_descriptor.name == "final_output":
+                print(f"\nOutput: {output_value}")
+                return
+
+        print("\nWarning: Could not find output. Full result:")
+        print(result.outputs)
+    else:
+        print(f"\n✗ Workflow execution failed: {result.name}")
+        if hasattr(result, "body") and hasattr(result.body, "error"):
+            error = result.body.error
+            print(f"Error: {error.message if hasattr(error, 'message') else str(error)}")
+        sys.exit(1)
+
+
+if __name__ == "__main__":
+    main()
+```
+
 Run the workflow with a query:
+
 ```bash
-uv run python run.py "Is it safe to push to production today?"
+uv run python workflow.py "Is it safe to push to production today?"
 ```
 
 The output shows the agent's response after it queries the MCP server and evaluates whether pushing to production is safe.
