--- a/docs/gram/clients/using-vellum-agents-with-gram-mcp-servers.mdx
+++ b/docs/gram/clients/using-vellum-agents-with-gram-mcp-servers.mdx
@@ -100,11 +100,13 @@ Enter `GRAM_KEY` for the variable name, paste your Gram key as the value, and cl
 
 ## Adding a Vellum agent
 
-In a new workflow, add an input as an Agent Node.
+On the new workflow creation screen if shown a prompt input screen you can prompt Vellum with `Create entrypoint, agent, and output nodes` otherwise use the **Create Workflow** button to create a new workflow.
+
+Add an Agent node.
 
 ![Screenshot of adding an agent node to a Vellum workflow](./assets/vellum-add-agent-node.png)
 
-Click the Agent Node, then click **+ Tool**.
+Click the Agent node, then click **+ Tool**.
 
 ![Screenshot of the Add Tool button in the agent node](./assets/vellum-add-tool-button.png)
 
@@ -115,7 +117,7 @@ Select **MCP Server** from the options.
 Fill in the MCP server configuration:
 
 - **Server Name**: CanIPushToProd
-- **Server URL**: https://app.getgram.ai/mcp/canipushtoprod
+- **Server URL**: `https://app.getgram.ai/mcp/your-server-slug` (your Gram MCP server URL)
 - **Authentication**: API Key
 - **API Key Header Name**: Authorization
 - **API Key Value**: GRAM_KEY
@@ -124,9 +126,11 @@ Fill in the MCP server configuration:
 
 Confirm to save. Vellum automatically discovers the available tools. You should see the MCP server listed under Tools.
 
+To add a prompt, go to the **Overview** tab and click **Edit Prompt**.
+
 ![Screenshot of the Edit Prompt button in the agent overview](./assets/vellum-edit-prompt-button.png)
 
-To add a prompt, go to the **Overview** tab and click **Edit Prompt**. In the modal, enter this system prompt:
+In the modal, enter this system prompt:
 
 ```
 Is it safe to push to production today?
@@ -134,7 +138,7 @@ Is it safe to push to production today?
 
 ![Screenshot of adding a system prompt to the agent](./assets/vellum-add-system-prompt.png)
 
-Connect the Entrypoint to the Agent Node, then connect the Agent Node to the Output. Click the Output node, select **Agent** for the output type, and set the output name to `Text`.
+Connect the Entrypoint node to the Agent node, then connect the Agent node to the Output. Click the Output Value, select **Agent** for the Node type, and set the Output name to `Text`.
 
 ![Screenshot of connecting workflow nodes in Vellum](./assets/vellum-connect-workflow-nodes.png)
 
