--- a/docs/gram/clients/using-vellum-agents-with-gram-mcp-servers.mdx
+++ b/docs/gram/clients/using-vellum-agents-with-gram-mcp-servers.mdx
@@ -86,7 +86,7 @@ Take note of your MCP server URL on the **Hosted URL** section.
 
 ## Connecting Vellum to your Gram MCP server
 
-With the CanIPushToProd MCP server ready, you can connect it to Vellum by configuring a tool in an agent node.
+With the `CanIPushToProd` MCP server ready, you can connect it to Vellum by configuring a tool in an agent node.
 
 ## Adding a secret environment to Vellum
 
@@ -156,7 +156,7 @@ If the MCP Client can't connect to your server:
 
 - Verify the server URL is correct.
 - Check that the MCP server is published as public in Gram.
-- For authenticated servers, ensure your API key is valid.
+- For authenticated servers, ensure your Gram API key is valid.
 - Test the connection using the Gram Playground first.
 
 ### Tool calls not working
@@ -171,7 +171,7 @@ If the AI agent isn't calling the MCP tools:
 
 For authenticated servers:
 
-- Verify your Gram API key in the dashboard under **Settings > API Keys**.
+- Verify your Gram API key in the dashboard under **Settings → API Keys**.
 - Ensure the authorization header format is correct.
 - Check that environment variables are correctly set in Gram.
 
