--- a/docs/gram/clients/using-vellum-agents-with-gram-mcp-servers.mdx
+++ b/docs/gram/clients/using-vellum-agents-with-gram-mcp-servers.mdx
@@ -138,11 +138,11 @@ Is it safe to push to production today?
 
 ![Screenshot of adding a system prompt to the agent](./assets/vellum-add-system-prompt.png)
 
-Connect the Entrypoint node to the Agent node, then connect the Agent node to the Output. Click the Output Value, select **Agent** for the Node type, and set the Output name to `Text`.
+Connect the Entrypoint node to the Agent node, then connect the Agent node to the Output. Click on the Output node and under **Overview → Output Value**, select `Agent` for the **Node Output**, and set the **Output Name** to `Text`.
 
 ![Screenshot of connecting workflow nodes in Vellum](./assets/vellum-connect-workflow-nodes.png)
 
-Click **▶️ Run**. The workflow should return a response indicating whether pushing to production is safe based on the CanIPushToProd server's evaluation.
+Click **▶️ Run**. The workflow should return a response indicating whether pushing to production is safe based on the `CanIPushToProd` server's evaluation.
 
 ![Screenshot of the workflow response showing the agent output](./assets/vellum-workflow-response.png)
 
