--- a/docs/gram/api-clients/using-vellum-workflows-sdk-with-gram-mcp-servers.mdx
+++ b/docs/gram/api-clients/using-vellum-workflows-sdk-with-gram-mcp-servers.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Using Vellum Workflows with Gram-hosted MCP servers"
-description: "Build a Vellum workflow that connects to a Gram-hosted MCP server and uses natural language to query your APIs."
+description: "Build a Vellum Workflow that connects to a Gram-hosted MCP server and uses natural language to query your APIs."
 sidebar:
   order: 2
 ---
