Update server name

--- a/docs/gram/clients/using-vellum-agents-with-gram-mcp-servers.mdx
+++ b/docs/gram/clients/using-vellum-agents-with-gram-mcp-servers.mdx
@@ -86,7 +86,7 @@ Take note of your MCP server URL in the **Hosted URL** section.
 
 ## Connecting Vellum to your Gram MCP server
 
-With the `CanIPushToProd` MCP server ready, you can connect it to Vellum by configuring a tool in an agent node.
+With the Push Advisor MCP server ready, you can connect it to Vellum by configuring a tool in an agent node.
 
 ## Adding a secret environment to Vellum
 
@@ -122,7 +122,7 @@ Otherwise, use the **Create Workflow** button to create a new Workflow:
 
 - Configure the MCP server as follows:
 
-  - **Server Name:** CanIPushToProd
+  - **Server Name:** Push Advisor
   - **Server URL:** `https://app.getgram.ai/mcp/your-server-slug` (your Gram MCP server URL)
   - **Authentication:** API Key
   - **API Key Header Name:** Authorization
@@ -150,7 +150,7 @@ Otherwise, use the **Create Workflow** button to create a new Workflow:
 
   ![Screenshot of connecting workflow nodes in Vellum](./assets/vellum-connect-workflow-nodes.png)
 
-- Click **▶️ Run**. The workflow should return a response indicating whether pushing to production is safe based on the `CanIPushToProd` server's evaluation.
+- Click **▶️ Run**. The workflow should return a response indicating whether pushing to production is safe based on the Push Advisor server's evaluation.
 
   ![Screenshot of the workflow response showing the agent output](./assets/vellum-workflow-response.png)
 
