Update server name

--- a/docs/gram/api-clients/using-vellum-workflows-sdk-with-gram-mcp-servers.mdx
+++ b/docs/gram/api-clients/using-vellum-workflows-sdk-with-gram-mcp-servers.mdx
@@ -167,7 +167,7 @@ from vellum.workflows.types.definition import MCPServer
 
 # MCP server configuration
 mcp_server = MCPServer(
-    name="CanIPushToProd",
+    name="push_advisor",
     url="https://app.getgram.ai/mcp/your_server_slug",
     authorization_type=AuthorizationType.API_KEY,
     api_key_header_key="Authorization",
@@ -186,7 +186,7 @@ from vellum.workflows.nodes.displayable.tool_calling_node import ToolCallingNode
 ...
 
 class Agent(ToolCallingNode):
-    """Agent node that uses the CanIPushToProd MCP server as a tool."""
+    """Agent node that uses the push_advisor MCP server as a tool."""
 
     ml_model = "gpt-5-responses"
     prompt_inputs = {"query": Inputs.query}
@@ -199,7 +199,7 @@ class Agent(ToolCallingNode):
                 RichTextPromptBlock(
                     blocks=[
                         PlainTextPromptBlock(
-                            text="You are a helpful assistant with access to the CanIPushToProd MCP server. When users ask questions about pushing to production, you must actively use the available MCP tools to check the current status and provide a direct, clear answer. Do not ask the user what they want - instead, automatically use the appropriate tools and provide a helpful response based on the tool results. Always give a definitive answer when possible."
+                            text="You are a helpful assistant with access to the push_advisor MCP server. When users ask questions about pushing to production, you must actively use the available MCP tools to check the current status and provide a direct, clear answer. Do not ask the user what they want - instead, automatically use the appropriate tools and provide a helpful response based on the tool results. Always give a definitive answer when possible."
                         )
                     ]
                 )
@@ -228,7 +228,7 @@ class Agent(ToolCallingNode):
     functions = [mcp_server]
 ```
 
-The `Agent` class defines a tool-calling node that uses GPT-5 with the `CanIPushToProd` MCP server. The `blocks` list structures the conversation: a system message sets the assistant's role, and a user message injects the query using Jinja templating (`{{ query }}`). The `functions` list connects the MCP server, giving the agent access to its tools.
+The `Agent` class defines a tool-calling node that uses GPT-5 with the `push_advisor` MCP server. The `blocks` list structures the conversation: a system message sets the assistant's role, and a user message injects the query using Jinja templating (`{{ query }}`). The `functions` list connects the MCP server, giving the agent access to its tools.
 
 Create the output node to define how the Workflow returns results:
 
@@ -253,7 +253,7 @@ Finally, connect all components:
 from vellum.workflows.workflows.base import BaseWorkflow
 
 class Workflow(BaseWorkflow[Inputs, BaseState]):
-    """Vellum workflow with Agent node configured to use CanIPushToProd MCP server."""
+    """Vellum workflow with Agent node configured to use push_advisor MCP server."""
 
     graph = Agent >> FinalOutput
 
